frontend/test/should_fail/index_count_edge_model.gm
enum enu
{
	bar, baz, qux
}

edge class E
{
	i : enu;
}

index fooi { E.i }
